@@ -24,6 +24,8 @@
  * 10.07.98 jl  Added the log command
  * 05.04.99 jl  The logfile name should also be passed as a parameter
  * 04.03.2002 jl Treat the ^ character between quotes as control code prefix
+ * 10.09.2013 ts Support sending the null character
+ * 10.10.2013 ts Add the pipedshell command
  */
 
 #ifdef HAVE_CONFIG_H
@@ -40,6 +42,11 @@
 #define ERR	-1
 #define RETURN	1
 #define BREAK	2
+
+enum {
+  NULL_CHARACTER = 254,
+  SKIP_NEWLINE   = 255,
+};
 
 struct line {
   char *line;
@@ -211,7 +218,7 @@ char *getword(char **s)
              t[len] >= '0'; f++)
           buf_wr(idx, 8 * buf_rd(idx) + t[len++] - '0');
         if (buf_rd(idx) == 0)
-          buf_wr(idx, '@');
+          buf_wr(idx, NULL_CHARACTER);
         idx++;
         len--;
         continue;
@@ -233,7 +240,7 @@ char *getword(char **s)
           buf_wr(idx++, '\f');
           break;
         case 'c':
-          buf_wr(idx++, 255);
+          buf_wr(idx++, SKIP_NEWLINE);
           break;
         default:
           buf_wr(idx++, t[len]);
@@ -437,12 +444,14 @@ int output(char *text, FILE *fp)
       fputc(' ', fp);
     first = 0;
     for(; *w; w++) {
-      if (*w == 255) {
+      if (*w == SKIP_NEWLINE) {
         donl = 0;
         continue;
       }
       if (*w == '\n')
         fputs(newline, fp);
+      else if (*w == NULL_CHARACTER)
+        fputc('\0', fp);
       else
         fputc(*w, fp);
     }
@@ -627,6 +636,42 @@ int expect(char *text)
 int shell(char *text)
 {
   laststatus = system(text);
+  return OK;
+}
+
+/*
+ * Run a command and send its stdout to stdout ( = modem).
+ */
+int pipedshell(char *text)
+{
+  FILE *fp = popen(text, "r");
+  if (fp == NULL) {
+    laststatus = errno;
+    return OK;
+  }
+
+  char received[64];
+  size_t read = 0;
+  while ((read = fread(received, sizeof(char), 64, fp))) {
+#ifdef HAVE_USLEEP
+    /* 200 ms delay. */
+    usleep(200000);
+#endif
+
+    char *sent = received;
+    while (read-- > 0)
+      fputc(*sent++, stdout);
+
+    fflush(stdout);
+  }
+
+  int status = pclose(fp);
+  if (WIFEXITED(status))
+    laststatus = WEXITSTATUS(status);
+  else if (WIFSIGNALED(status))
+    laststatus = WTERMSIG(status);
+  else
+    laststatus = status;
   return OK;
 }
 
@@ -942,6 +987,7 @@ struct kw {
 } keywords[] = {
   { "expect",	expect },
   { "send",	dosend },
+  { "!<",	pipedshell },
   { "!",	shell },
   { "goto",	dogoto },
   { "gosub",	dogosub },
